fixed spacing issue when desktop view

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,9 +8,3 @@ p {
   margin: 0;
   padding: 5px;
 }
-/* @media only screen and (min-width: 960px) {
-  body {
-    width: 960px;
-    height: 768px;
-  }
-} */
